# stylang

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
core/: lib.json  lib.sl
core/solidity/: mod.sl
core/view/: mod.sl  text.sl
crates/parser/: Cargo.toml
crates/parser/src/: errors.rs  file.rs  lib.rs  meta.rs  stmt.rs  token.rs
crates/parser/src/expr/: assign.rs  expr.rs  flow.rs  mod.rs  op.rs  path.rs  slice.rs  tuple.rs  xml.rs
crates/parser/src/item/: fn.rs  item.rs  mod.rs  vs.rs
crates/parser/src/lit/: bool.rs  color.rs  lit.rs  num.rs  string.rs
crates/parser/src/patt/: patt.rs  range.rs  ty.rs
crates/parser/src/ty/: fn.rs  num.rs  path.rs  ty.rs
crates/parser/tests/: spec.rs  stylang.rs
spec/: donate.sl  sponsor.sl  sponsor.st
src/: lib.rs
src/lang/: attr.rs  block.rs  c.rs  call.rs  color.rs  complex.rs  cond.rs  delimiter.rs  digits.rs  errors.rs  expr.rs  field.rs  file.rs  func.rs  ident.rs  index.rs  input.rs  inputs.rs  item.rs  lit.rs  meta.rs  mod.rs  mods.rs  num.rs  op.rs  parse.rs  path.rs  patt.rs  punct.rs  punctuated.rs  range.rs  s.rs  script.rs  stmt.rs  string.rs  token.rs  tokens.rs  ty.rs  types.rs  unit.rs  (+3 more)
src/lang/expr/: array.rs  assign.rs  block.rs  call.rs  caudal.rs  cf.rs  chain.rs  cond.rs  ctrl.rs  expr.rs  field.rs  flow.rs  index.rs  lit.rs  match.rs  mod.rs  op.rs  paren.rs  parse.rs  partial.rs  path.rs  range.rs  repeat.rs  rr.rs  slice.rs  tuple.rs  variable.rs  xml.rs
src/lang/item/: cty.rs  fn.rs  item.rs  mod.rs  vs.rs
src/lang/lit/: bool.rs  color.rs  lit.rs  mod.rs  num.rs  string.rs
src/lang/patt/: mod.rs  patt.rs  range.rs  ty.rs
src/lang/ty/: fn.rs  mod.rs  num.rs  path.rs  ty.rs
src/opcode/: attrs.rs  layout.rs  mod.rs  nav.rs  value.rs  variable.rs  views.rs
stylang/spec/: donate.json  donate.sl  expr.json  expr.sl  match.json  match.sl  ops.json  ops.sl
stylang/std/: lib.json  lib.sl
stylang/std/solidity/: mod.json
stylang/std/view/: mod.json  text.json  theme.json
stylang/std/views/: mod.json  text.json  theme.json  theme.sl
tests/: core_test.rs  spec.rs  spec.rs~
