[package]
description = "A group of graphical interface description languages that separates style/class from behavior and layout"
documentation = "https://docs.rs/stylang"
edition = "2024"
license = "MIT"
name = "stylang"
repository = "https://github.com/styles-lab/stylang"
version = "0.1.0"

[dependencies]
log = {version = "^0.4"}
parserc = {version = "^0.6", optional = true}
serde = {version = "^1", optional = true}
thiserror = "^2"

[dev-dependencies]
divan = {version = "^0.1"}
pretty_env_logger = {version = "^0.5"}
serde_json = "1.0.140"
unindent = "0.2.4"

[features]
default = ["serde", "lang"]

serde = ["dep:serde"]

lang = ["parserc"]
