[package]
description = "The parser/ast for stylang"
documentation = "https://docs.rs/stylang-parser"
edition = "2024"
license = "MIT"
name = "stylang-parser"
repository = "https://github.com/styles-lab/stylang"
version = "0.1.0"

[dependencies]
log = { version = "^0.4" }
parserc = { version = "^0.9" }
serde = { version = "^1", optional = true }
thiserror = "^2"

[dev-dependencies]
bendy = { version = "^0.3", features = ["std", "serde"] }
divan = { version = "^0.1" }
flexbuffers = "25.2.10"
pretty_env_logger = { version = "^0.5" }
serde-lexpr = "0.1.3"
serde_json = "1.0.140"
unindent = "0.2.4"

[features]
default = ["serde"]
serde = ["dep:serde"]
